tests/runtime/invalid/exports.wit
invalid-u8: function()
invalid-s8: function()
invalid-u16: function()
invalid-s16: function()
invalid-char: function()
invalid-bool: function()
invalid-enum: function()
invalid-handle: function()
invalid-handle-close: function()
